--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@
                 <div class="card">
                     <img class="card-img-top" th:src="@{/images/java.png}" alt="Java Development" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">Purpose of Website</h5>
+                    <h5 class="card-title">What should Java Developers learn?</h5>
                     <p class="card-text">
                         <ul>
                             <li>Our website serves as a travel theme educational website to teach Java and concepts to Java learners.</li>
@@ -32,13 +32,14 @@
                 <div class="card">
                     <img class="card-img-top" th:src="@{/images/spring.png}" alt="Spring Development" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">What will you learn about?</h5>
+                    <h5 class="card-title">What is Spring?</h5>
                     <p class="card-text">
-                        <ul>
-                            <li>Basic concepts of Java arrays, color scales, and ASCII conversions through tourist sites</li>
-                            <li>Examples of uses of APIs (travel theme)</li>
-                            <li>Use of Javascripts to create table (frontend) through packing lists</li>
-                        </ul>
+                        <ol>
+                            <li>Spring Framework is the most popular application development framework of Java. </li>
+                            <li>Spring Boot helps to create a stand-alone application with less configuration.</li>
+                            <li>Spring MVC is a model view controller-based web framework under the Spring framework.</li>
+                            <li>ThymeLeaf is a server-side Java template engine, supports HTML5 JVM web development, and provides full integration with Spring Framework.</li>
+                        </ol>
                     </p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
